@@ -328,8 +328,14 @@ cumulative_command_time = 0
 exit_status = 0 # exit status, assume success by default
 num_jobs = None
 delayed_warnings = []
-SettableOptions = None
 
+OptionsParser = None
+
+def AddOption(*args, **kw):
+    if not kw.has_key('default'):
+        kw['default'] = None
+    result = apply(OptionsParser.add_local_option, args, kw)
+    return result
 #
 class Stats:
     def __init__(self):
@@ -617,14 +623,18 @@ def version_string(label, module):
                   module.__developer__,
                   module.__buildsys__)
 
-def _main(options, args):
+def _main(parser):
     global exit_status
+
+    options = parser.values
 
     # Here's where everything really happens.
 
-    # First order of business:  set up default warnings and and then
-    # handle the user's warning options, so we can warn about anything
-    # that happens appropriately.
+    # First order of business:  set up default warnings and then
+    # handle the user's warning options, so that we can issue (or
+    # suppress) appropriate warnings about anything that might happen,
+    # as configured by the user.
+
     default_warnings = [ SCons.Warnings.CorruptSConsignWarning,
                          SCons.Warnings.DeprecatedWarning,
                          SCons.Warnings.DuplicateEnvironmentWarning,
@@ -640,6 +650,9 @@ def _main(options, args):
     if options.warn:
         _setup_warn(options.warn)
 
+    # Now that we have the warnings configuration set up, we can actually
+    # issue (or suppress) any warnings about warning-worthy things that
+    # occurred while the command-line options were getting parsed.
     try:
         dw = options.delayed_warnings
     except AttributeError:
@@ -754,18 +767,22 @@ def _main(options, args):
     # read and execute have access to them.
     targets = []
     xmit_args = []
-    for a in args:
+    for a in parser.largs:
+        if a[0] == '-':
+            continue
         if '=' in a:
             xmit_args.append(a)
         else:
             targets.append(a)
-    SCons.Script._Add_Targets(targets)
+    SCons.Script._Add_Targets(targets + parser.rargs)
     SCons.Script._Add_Arguments(xmit_args)
 
     sys.stdout = SCons.Util.Unbuffered(sys.stdout)
 
     memory_stats.append('before reading SConscript files:')
     count_stats.append(('pre-', 'read'))
+
+    # And here's where we (finally) read the SConscript files.
 
     progress_display("scons: Reading SConscript files ...")
 
@@ -784,19 +801,22 @@ def _main(options, args):
         sys.exit(exit_status)
     global sconscript_time
     sconscript_time = time.time() - start_time
-    SCons.SConf.CreateConfigHBuilder(SCons.Defaults.DefaultEnvironment())
-    progress_display("scons: done reading SConscript files.")
 
-    # Tell the Node.FS subsystem that we're all done reading the
-    # SConscript files and calling Repository() and BuildDir() and the
-    # like, so it can go ahead and start memoizing the string values of
-    # file system nodes.
-    SCons.Node.FS.save_strings(1)
+    progress_display("scons: done reading SConscript files.")
 
     memory_stats.append('after reading SConscript files:')
     count_stats.append(('post-', 'read'))
 
-    fs.chdir(fs.Top)
+    SCons.SConf.CreateConfigHBuilder(SCons.Defaults.DefaultEnvironment())
+
+    # Now re-parse the command-line options (any to the left of a '--'
+    # argument, that is) with any user-defined command-line options that
+    # the SConscript files may have added to the parser object.  This will
+    # emit the appropriate error message and exit if any unknown option
+    # was specified on the command line.
+
+    parser.preserve_unknown_options = False
+    parser.parse_args(parser.largs, options)
 
     if options.help:
         help_text = SCons.Script.help_text
@@ -809,6 +829,16 @@ def _main(options, args):
             print "Use scons -H for help about command-line options."
         exit_status = 0
         return
+
+    # Change directory to the top-level SConstruct directory, then tell
+    # the Node.FS subsystem that we're all done reading the SConscript
+    # files and calling Repository() and BuildDir() and changing
+    # directories and the like, so it can go ahead and start memoizing
+    # the string values of file system nodes.
+
+    fs.chdir(fs.Top)
+
+    SCons.Node.FS.save_strings(1)
 
     # Now that we've read the SConscripts we can set the options
     # that are SConscript settable:
@@ -965,19 +995,15 @@ def _main(options, args):
     memory_stats.append('after building targets:')
     count_stats.append(('post-', 'build'))
 
-def _exec_main(parser):
+def _exec_main(parser, values):
     sconsflags = os.environ.get('SCONSFLAGS', '')
     all_args = string.split(sconsflags) + sys.argv[1:]
 
-    import SConsOptions
-    global SettableOptions
-    SettableOptions = SConsOptions.SConsValues(parser.get_default_values())
-
-    options, args = parser.parse_args(all_args, SettableOptions)
+    options, args = parser.parse_args(all_args, values)
 
     if type(options.debug) == type([]) and "pdb" in options.debug:
         import pdb
-        pdb.Pdb().runcall(_main, options, args)
+        pdb.Pdb().runcall(_main, parser)
     elif options.profile_file:
         from profile import Profile
 
@@ -995,7 +1021,7 @@ def _exec_main(parser):
 
         prof = Profile()
         try:
-            prof.runcall(_main, options, args)
+            prof.runcall(_main, parser)
         except SConsPrintHelpException, e:
             prof.dump_stats(options.profile_file)
             raise e
@@ -1003,9 +1029,10 @@ def _exec_main(parser):
             pass
         prof.dump_stats(options.profile_file)
     else:
-        _main(options, args)
+        _main(parser)
 
 def main():
+    global OptionsParser
     global exit_status
     global first_command_start
 
@@ -1024,9 +1051,12 @@ def main():
 
     import SConsOptions
     parser = SConsOptions.Parser(version)
+    values = SConsOptions.SConsValues(parser.get_default_values())
+
+    OptionsParser = parser
     
     try:
-        _exec_main(parser)
+        _exec_main(parser, values)
     except SystemExit, s:
         if s:
             exit_status = s
