@@ -469,7 +469,7 @@ class SConsEnvironment(SCons.Environment.Base):
 
     def GetOption(self, name):
         name = self.subst(name)
-        return getattr(SCons.Script.Main.SettableOptions, name)
+        return getattr(SCons.Script.Main.OptionsParser.values, name)
 
     def Help(self, text):
         text = self.subst(text, raw=1)
@@ -525,7 +525,7 @@ class SConsEnvironment(SCons.Environment.Base):
 
     def SetOption(self, name, value):
         name = self.subst(name)
-        SCons.Script.Main.SettableOptions.set_option(name, value)
+        SCons.Script.Main.OptionsParser.values.set_option(name, value)
 
 #
 #
