@@ -1,0 +1,82 @@
+#!/usr/bin/env python
+#
+# __COPYRIGHT__
+#
+# Permission is hereby granted, free of charge, to any person obtaining
+# a copy of this software and associated documentation files (the
+# "Software"), to deal in the Software without restriction, including
+# without limitation the rights to use, copy, modify, merge, publish,
+# distribute, sublicense, and/or sell copies of the Software, and to
+# permit persons to whom the Software is furnished to do so, subject to
+# the following conditions:
+#
+# The above copyright notice and this permission notice shall be included
+# in all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY
+# KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
+# WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+#
+
+__revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
+
+"""
+Verify the help text when the AddOption() function is used (and when
+it's not).
+"""
+
+import string
+
+import TestSCons
+
+test = TestSCons.TestSCons()
+
+test.write('SConstruct', """\
+env = Environment()
+AddOption('--force',
+          action="store_true",
+          help='force installation (overwrite existing files)')
+AddOption('--prefix',
+          nargs=1,
+          dest='prefix',
+          action='store',
+          type='string',
+          metavar='DIR',
+          help='installation prefix')
+""")
+
+expected_lines = [
+    'Local Options:',
+    '  --force                     force installation (overwrite existing files)',
+    '  --prefix=DIR                installation prefix',
+]
+
+test.run(arguments = '-h')
+lines = string.split(test.stdout(), '\n')
+missing = filter(lambda e, l=lines: not e in l, expected_lines)
+
+if missing:
+    print "====== STDOUT:"
+    print test.stdout()
+    print "====== Missing the following lines in the above AddOption() help output:"
+    print string.join(missing, "\n")
+    test.fail_test()
+
+test.unlink('SConstruct')
+
+test.run(arguments = '-h')
+lines = string.split(test.stdout(), '\n')
+unexpected = filter(lambda e, l=lines: e in l, expected_lines)
+
+if unexpected:
+    print "====== STDOUT:"
+    print test.stdout()
+    print "====== Unexpected lines in the above non-AddOption() help output:"
+    print string.join(unexpected, "\n")
+    test.fail_test()
+
+test.pass_test()
