@@ -36,6 +36,9 @@ RELEASE 0.97.X - XXX
   - Support {Get,Set}Option('random') so random-dependency interaction
     with CacheDir() is controllable from SConscript files.
 
+  - Add a new AddOption() function to support user-defined command-
+    line flags (like --prefix=, --force, etc.).
+
   - Push and retrieve built symlinks to/from a CacheDir() as actual
     symlinks, not by copying the file contents.
 
